--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
             <div class="quote-image">
                 <img src="./Fx8oL.png" alt="quotes">
             </div> 
-            <div class="quote-text">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ullam dolorem dolore voluptatibus in, officiis aut perspiciatis at corrupti, hic sunt porro rem nobis quaerat. Placeat ullam eligendi perspiciatis facilis!</p>
-
+            <div class="quote-text" id = "quote">
+                <p id  = "quote-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ullam dolorem dolore voluptatibus in, officiis aut perspiciatis at corrupti, hic sunt porro rem nobis quaerat. Placeat ullam eligendi perspiciatis facilis!</p>     
             </div>
-            <button class = 'next-quote'>Get Next Quote</button>
+            <div class="autor" id = "athr-name">
+                Alan
+            </div>
+            <button id = "next-quote">Get Next Quote</button>
         </div>
     </div>
 </body>
