Added script to fetch the data using API

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
                 <img src="./Fx8oL.png" alt="quotes">
             </div> 
             <div class="quote-text" id = "quote">
-                <p id  = "quote-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ullam dolorem dolore voluptatibus in, officiis aut perspiciatis at corrupti, hic sunt porro rem nobis quaerat. Placeat ullam eligendi perspiciatis facilis!</p>     
+                <p id  = "quote-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quibusdam soluta velit eum recusandae maxime quis earum sunt possimus natus odit ratione, repudiandae vel delectus? Quas aperiam repellat iure ut?</p>     
             </div>
             <div class="autor" id = "athr-name">
                 Alan
