Removed unwanted files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="quote-main">
             <div class="quote-image">
-                <img src="./Fx8oL.png" alt="quotes">
+                <img src="./assets/Fx8oL.png" alt="quotes">
             </div> 
             <div class="quote-text" id = "quote">
                 <p id  = "quote-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quibusdam soluta velit eum recusandae maxime quis earum sunt possimus natus odit ratione, repudiandae vel delectus? Quas aperiam repellat iure ut?</p>     
